# foo

./: CMakeLists.txt
.obs/: workflows.yml
CMake/: FooConfig.cmake.in
include/foo/: foo.h
src/: foo.cpp
